wa ko kahibaw unsay note ani

--- a/content/themes/masterdev2/resources/assets/config.json
+++ b/content/themes/masterdev2/resources/assets/config.json
@@ -6,6 +6,10 @@
     ],
     "customizer": [
       "./scripts/customizer.js"
+    ],
+    "aos": [
+      "./scripts/aos.js",
+      "./styles/aos.css"
     ]
   },
   "publicPath": "/content/themes/masterdev2",
