--- a/content/themes/masterdev2/package.json
+++ b/content/themes/masterdev2/package.json
@@ -112,6 +112,7 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
     "@fortawesome/fontawesome-free-regular": "^5.0.10",
     "@fortawesome/fontawesome-free-solid": "^5.0.10",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "v4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
