--- a/content/themes/masterdev2/composer.json
+++ b/content/themes/masterdev2/composer.json
@@ -36,7 +36,8 @@
     "composer/installers": "~1.0",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.5",
-    "soberwp/controller": "~2.1.0"
+    "soberwp/controller": "~2.1.0",
+    "friendsofphp/php-cs-fixer": "~2.13.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
@@ -46,6 +47,7 @@
     "test": ["phpcs"],
     "post-create-project-cmd": [
       "Roots\\Sage\\Installer\\ComposerScript::postCreateProject"
-    ]
+    ],
+    "php-cs-fixer": "php-cs-fixer --config=./phpcs.xml"
   }
 }
