--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ core/
 content/*
 content/cache/
 !content/themes/
+!content/mu-plugins
 content/uploads/cache
 content/uploads/mailpoet/
 !content/uploads/
