--- a/content/themes/masterdev2/package.json
+++ b/content/themes/masterdev2/package.json
@@ -88,12 +88,12 @@
     "imagemin-mozjpeg": "~7.0.0",
     "imagemin-webpack-plugin": "~2.2.0",
     "import-glob": "~1.5",
-    "node-sass": "~4.9.3",
+    "node-sass": "^4.9.3",
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
     "resolve-url-loader": "~2.3.0",
     "rimraf": "~2.6",
-    "sass-loader": "~6.0",
+    "sass-loader": "^6.0",
     "style-loader": "^0.22.1",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "~18.2.0",
